events/api-docs.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: api-docs
  namespace: events
spec:
  rules:
    - host: api-docs-a7ac0dd4.nip.io
      http:
        paths:
          - backend:
              service:
                name: api-docs-eventsource-svc
                port:
                  number: 12000
            path: /push
            pathType: Prefix
  tls:
    - hosts:
        - api-docs-a7ac0dd4.nip.io
      secretName: api-docs-cert
